--- a/app/ExamAttempt/examAttempt-list.html
+++ b/app/ExamAttempt/examAttempt-list.html
@@ -28,7 +28,7 @@
     </table>
     <div class="btn-group" role="group">
         <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#selectModal">
-            add
+            Select student to censor
         </button>
     </div>
 </div>
@@ -62,7 +62,7 @@
                                     <td> {{user.id}}
                                         <div class="btn-group" role="group">
                                             <button type="button" class="btn btn-primary" (click)="create(user.id)">
-                                                add
+                                                Censor
                                             </button>
                                         </div>
                                     </td>
